...
        ),
        label: Text(l10n.navCreate),
      ),
      NavigationRailDestination(
        icon: const Icon(
          Icons.library_books_outlined,
          key: ValueKey('nav.library'),
        ),
        selectedIcon: const Icon(
          Icons.library_books,
          key: ValueKey('nav.library'),
        ),
        label: Text(l10n.navLibrary),
...
